WikiExtrasPlugin/0.13.1dev: extend padding for headlines in right-aligned boxes to include invisible paragraph marker to avoid seemingly empty headline rows
git-svn-id: https://trac-hacks.org/svn@10351 7322e99d-02ea-0310-aa39-e9a107903beb

--- a/wikiextrasplugin/trunk/tracwikiextras/htdocs/css/boxes.css
+++ b/wikiextrasplugin/trunk/tracwikiextras/htdocs/css/boxes.css
@@ -192,7 +192,7 @@
     border: none;
     border-radius: 0;
     margin-left: 0;
-    padding: 0 11px 0 0;
+    padding: 0 2em 0 0;
 }
 .wikiextras.box.icon *:first-child {
     margin-top: 15px;
